--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
             <div class="whitecards">
                 <div class="wc-1"><img src="icons/services/icon-analytics.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Lorem Ipsum</h4>
-                    </a>
+                    <a href="#top"><h4>Lorem Ipsum</h4></a>
                     <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
                         cupiditate
                         non
@@ -170,20 +168,15 @@
             <div class="whitecards">
                 <div class="wc-2"><img src="icons/services/icon-bookmarks.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Dolor Sitema</h4>
-                    </a>
-                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                        tarad limino ata</p>
+                    <a href="#top"><h4>Dolor Sitema</h4></a>
+                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
                 </div>
             </div>
-
+            
             <div class="whitecards">
                 <div class="wc-3"><img src="icons/services/icon-paper.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Sed ut perspiciatis</h4>
-                    </a>
+                    <a href="#top"><h4>Sed ut perspiciatis</h4></a>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                         pariatur
                     </p>
@@ -193,9 +186,7 @@
             <div class="whitecards">
                 <div class="wc-4"><img src="icons/services/icon-speedometer.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Magni Dolores</h4>
-                    </a>
+                    <a href="#top"><h4>Magni Dolores</h4></a>
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
                         est
                         laborum</p>
@@ -205,9 +196,7 @@
             <div class="whitecards">
                 <div class="wc-5"><img src="icons/services/icon-globe.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Nemo Enim</h4>
-                    </a>
+                    <a href="#top"><h4>Nemo Enim</h4></a>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                         deleniti
                         atque</p>
@@ -217,9 +206,7 @@
             <div class="whitecards">
                 <div class="wc-6"><img src="icons/services/icon-time.svg"></div>
                 <div class="data-paragraph">
-                    <a href="#top">
-                        <h4>Eiusmod Tempor</h4>
-                    </a>
+                    <a href="#top"><h4>Eiusmod Tempor</h4></a>
                     <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
                         est
                         eligendi</p>
@@ -229,39 +216,39 @@
     </section>
 
     <section class="choose">
-        <div class="titulo">
-            <h2>Why choose us?</h2>
+        <div>
+            <h2>WHY CHOOSE US?</h2>
             <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
             </p>
         </div>
 
-        <div class="bc-container">
+        <div>
             <div class="bluecards">
-                <i class="far fa-gem"></i>
+                <img src="" alt="">
                 <h4>Corporis dolorem</h4>
                 <p>Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut
                     voluptatibus.</p>
-                <div><a href="#top">Read more</a></div>
+                <p><span>Read more</span></p>
             </div>
 
             <div class="bluecards">
-                <i class="fa fa-language"></i>
+                <img src="" alt="">
                 <h4>Voluptates dolores</h4>
                 <p>Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
-                <div><a href="#top">Read more</a></div>
+                <p><span>Read more</span></p>
             </div>
 
             <div class="bluecards">
-                <i class="far fa-object-group"></i>
+                <img src="" alt="">
                 <h4>Eum ut aspernatur</h4>
                 <p>Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex.</p>
-                <div><a href="#top">Read more</a></div>
+                <p><span>Read more</span></p>
             </div>
         </div>
 
-        <div class="numbers">
+        <div>
             <div>
-                <h1>274</h1>
+                <h1>271</h1>
                 <p>Clients</p>
             </div>
             <div>
@@ -281,158 +268,45 @@
 
     <section class="portfolio" id="portfolio">
 
-        <div class="titulo">
+        <div>
             <h2>Our Portfolio</h2>
-        </div>
 
-        <div class="pf-buttons">
-            <ul>
-                <li><a href="#portfolio" class="button">ALL</a></li>
-                <li><a href="#portfolio" class="button">APP</a></li>
-                <li><a href="#portfolio" class="button">CARD</a></li>
-                <li><a href="#portfolio" class="button">WEB</a></li>
-            </ul>
-        </div>
+            <div>
+                <input type="input" value="ALL">
+                <input type="input" value="APP">
+                <input type="input" value="CARD">
+                <input type="input" value="WEB">
+            </div>
 
-        <div class="pf-images">
-            <div class="img-container">
-                <img class="app1" src="images/portfolio/app1.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 1</a></h2>
-                        <p>APP</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="web3" src="images/portfolio/web3.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 3</a></h2>
-                        <p>WEB</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="app2" src="images/portfolio/app2.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 2</a></h2>
-                        <p>APP</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="card2" src="images/portfolio/card2.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 1</a></h2>
-                        <p>CARD</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="web2" src="images/portfolio/web2.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 2</a></h2>
-                        <p>WEB</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="app3" src="images/portfolio/app3.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 3</a></h2>
-                        <p>APP</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="card1" src="images/portfolio/card1.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Card 1</a></h2>
-                        <p>CARD</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="card3" src="images/portfolio/card3.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Card 3</a></h2>
-                        <p>CARD</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="img-container">
-                <img class="web1" src="images/portfolio/web1.jpg">
-                <div class="img-cont-hover">
-                    <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 1</a></h2>
-                        <p>WEB</p>
-                        <div class="img-links">
-                            <a href="portfolio"><i class="far fa-eye"></i></a>
-                            <a href="portfolio"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
         </div>
-
     </section>
 
-    <section class="testimonials" id="testimonials">
-        <h2 class="titulo">Testimonials</h2>
-        <div class="data-test">
-            <img src="images/testimonials/testimonial-1.jpg">
-            <div class="data-paragraph">
-                <h4>Saul Goodman</h4>
-                <span>Ceo & Founder</span>
-                <p>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                    Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</p>
+    <section class="testimonials">
+        <div>
+            <h1>Testimonials</h1>
+            <div>
+                <img src="" alt="">
+                <div>
+                    <h2>Saul Goodman</h2>
+                    <p>Ceo & Founder</p>
+                    <p>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
+                        Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</p>
+                    <div>
+                        dots
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="button">
-                <a href="#testimonials" class="button active"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
         </div>
     </section>
 
